
-------------------------------------------------------------------------------
General
-------------------------------------------------------------------------------

...

Workspaces
-------------------------------------------------------------------------------

...

Other general improvements
-------------------------------------------------------------------------------

...

-------------------------------------------------------------------------------
Backend
-------------------------------------------------------------------------------

RTEhtmlarea
-------------------------------------------------------------------------------

...

Other improvements to the Backend
-------------------------------------------------------------------------------

...

-------------------------------------------------------------------------------
Skin / Backend UI
-------------------------------------------------------------------------------

...

Other Improvements in the Skin / Backend UI
-------------------------------------------------------------------------------

...

-------------------------------------------------------------------------------
Administration / Customization
-------------------------------------------------------------------------------

...

Install tool
-------------------------------------------------------------------------------

...

-------------------------------------------------------------------------------
Development
-------------------------------------------------------------------------------

Extbase / Fluid
-------------------------------------------------------------------------------

...

Although we do our best to make adjustments in a backwards-compatible manner,
we needed to break backwards compatibility at a few places. In order to see if
you are affected and how the issues can be solved, please read our notes on
breaking changes:

http://forge.typo3.org/projects/typo3v4-mvc/wiki/Breaking_Changes

Backend Development